--- a/ShipEngineOp/Localization/en-us.cfg
+++ b/ShipEngineOp/Localization/en-us.cfg
@@ -2,36 +2,44 @@ Localization
 {
     en-us
     {
-        #LOC_SHIPENGOP_mainWindowTitle = Ship Engine Optimization
+        #LOC_SHIPENGOP_mainWindowTitle = Stage and Engine Config
         #LOC_SHIPENGOP_indiWindowTitle = Individual Comparison
         #LOC_SHIPENGOP_dvGraphTitle = Delta-v Limit Graph
         #LOC_SHIPENGOP_engPerfChartTitle = Engine Performance Chart
         #LOC_SHIPENGOP_engSelWindowTitle = Engine Selection
         #LOC_SHIPENGOP_grossCompTitle = Gross Comparison
         #LOC_SHIPENGOP_planetTitle = Planet Selection
+        #LOC_SHIPENGOP_stageWindowTitle = Stage Configuration
+        #LOC_SHIPENGOP_stageEngineWindowTitle = Stage Engine Selection
 
         #LOC_SHIPENGOP_empty = None
         #LOC_SHIPENGOP_joint = ,\u00A0
+        #LOC_SHIPENGOP_infinity = Infinity
 
         // main window
-        #LOC_SHIPENGOP_mainWindow_grossComp = Compare\nAll Engines at Once
-        #LOC_SHIPENGOP_mainWindow_indiComp = Compare\nup to 3 Individual Engines
+        #LOC_SHIPENGOP_mainWindow_stageConfig = Staging and Engine\nConfiguration Optimization
+        #LOC_SHIPENGOP_mainWindow_engineSepc = Detailed\nEngine Specifications
+        #LOC_SHIPENGOP_mainWindow_engineSetting = Engine Setting
+        #LOC_SHIPENGOP_mainWindow_propellantSetting = Propellant Setting
 
         // individual comparison window
         #LOC_SHIPENGOP_indiWindow_engine = Engine
         #LOC_SHIPENGOP_indiWindow_wdrToggle = Custom Mass Ratio
         #LOC_SHIPENGOP_indiWindow_addiWeightToggle = Additional Weight (t)
         #LOC_SHIPENGOP_indiWindow_applyToFuel = Apply to Fuel Type
-        #LOC_SHIPENGOP_indiWindow_selectWarning = Select at least one engine to continue
-        #LOC_SHIPENGOP_indiWindow_enginePerfChart = Engine Performance Chart
-        #LOC_SHIPENGOP_indiWindow_dvLimitCurce = Delta-v Limit Curve
+        #LOC_SHIPENGOP_indiWindow_enginePerfChart = Engine Configuration Chart
+        #LOC_SHIPENGOP_indiWindow_dvLimitCurce = TWR-delta-v Curve
+        #LOC_SHIPENGOP_indiWindow_linkAtm = Link atmospheric settings
 
         // engine selection list
         #LOC_SHIPENGOP_engList_fuelSelect = Select fuel type:
         #LOC_SHIPENGOP_engList_engineNumSelect = Now Selecting: Engine\u00A0
 
         // dv limit window
-        #LOC_SHIPENGOP_dvLimitWindow_twrLimit = Thrust to Weight Limit
+        #LOC_SHIPENGOP_dvLimitWindow_twrLimit = Thrust to Weight Range
+        #LOC_SHIPENGOP_dvLimitWindow_graphOption = Graph option
+        #LOC_SHIPENGOP_dvLimitWindow_dvCritical = Critical dv
+        #LOC_SHIPENGOP_dvLimitWindow_dvLimit = dv Limit
 
         // engine quantity window
         #LOC_SHIPENGOP_engQtyWindow_qtyMin = Qty. Min:\u00A0
@@ -39,22 +47,36 @@ Localization
         #LOC_SHIPENGOP_engQtyWindow_targetDv = Target dv:\u00A0
         #LOC_SHIPENGOP_engQtyWindow_targetTwr = Target TWR:\u00A0
 
-        // gross comparison window
-        #LOC_SHIPENGOP_grossWindow_fuelFilter = Filter by Fuel Types:
-        #LOC_SHIPENGOP_grossWindow_configTitle = Engine Configuration by Weight:
-        #LOC_SHIPENGOP_grossWindow_desiredDv = Desired dv (m/s):
-        #LOC_SHIPENGOP_grossWindow_desiredTwr = Desired TWR (surface):
-        #LOC_SHIPENGOP_grossWindow_minDv = Minimum dv (m/s):
-        #LOC_SHIPENGOP_grossWindow_minTwr = Minimum TWR (surface):
-        #LOC_SHIPENGOP_grossWindow_QtyFilter = Quantity Filter
-        #LOC_SHIPENGOP_grossWindow_setIndiComparison = Assign to individual comparison
-        #LOC_SHIPENGOP_grossWindow_setIndiCancel = Cancel
+        //stage window
+        #LOC_SHIPENGOP_stageWindow_desiredDv = Desired dv (m/s)
+        #LOC_SHIPENGOP_stageWindow_desiredTwr = Desired TWR (surface)
+        #LOC_SHIPENGOP_stageWindow_QtyFilter = Quantity Filter
+        #LOC_SHIPENGOP_stageWindow_strictMode = Strict Mode
+        #LOC_SHIPENGOP_stageWindow_propellantFilter = Propellant filter (vessel)
+        #LOC_SHIPENGOP_stageWindow_propellantFilterManualMode = Propellant filter
+        #LOC_SHIPENGOP_stageWindow_engineConfig = Available engine configuration sorted by weight
+        #LOC_SHIPENGOP_stageWindow_totalDv = Total dv:\u00A0
+        #LOC_SHIPENGOP_stageWindow_stage = Stage\u00A0
+        #LOC_SHIPENGOP_stageWindow_extraMass = Extra mass (t)
+        #LOC_SHIPENGOP_stageWindow_stageMass = Stage Mass:\u00A0
+        #LOC_SHIPENGOP_stageWindow_manualMode = Manually Select Engine
+        #LOC_SHIPENGOP_stageWindow_keepEngine = Asparagus Staging
+        #LOC_SHIPENGOP_stageWindow_includeInOp = Include in Optimization
+        #LOC_SHIPENGOP_stageWindow_splitStage = Automatic\nSplit
+        #LOC_SHIPENGOP_stageWindow_selectedStages = Selected Stage:
+        #LOC_SHIPENGOP_stageWindow_optimizeStaging = Optimize Staging
+
+        //setting windows
+        #LOC_SHIPENGOP_settingWindow_blacklist = Blacklist
+        #LOC_SHIPENGOP_settingWindow_propellant = Propellant
+        #LOC_SHIPENGOP_settingWindow_massRatio = Mass Ratio
+        #LOC_SHIPENGOP_settingWindow_saveSetting = Save Settings
 
         // common window
         #LOC_SHIPENGOP_common_planetSelect = Planet
         #LOC_SHIPENGOP_common_altitude = Altitude:\u00A0
-        #LOC_SHIPENGOP_common_constrainDv = Constrain dv
-        #LOC_SHIPENGOP_common_constrainTwr = Constrain TWR
+        #LOC_SHIPENGOP_common_constrainDv = Lock dv
+        #LOC_SHIPENGOP_common_constrainTwr = Lock TWR
         #LOC_SHIPENGOP_common_careerToggle = Career Mode
         #LOC_SHIPENGOP_common_payloadMass = Payload Mass (tons):
         #LOC_SHIPENGOP_common_loadMass = Load from Editor
@@ -65,14 +87,52 @@ Localization
         #LOC_SHIPENGOP_shipSpecs_totalMass = Total Mass:\u00A0
         #LOC_SHIPENGOP_shipSpecs_fuelMass = Fuel Mass:\u00A0
         #LOC_SHIPENGOP_shipSpecs_engineQty = Engine Qty.:\u00A0
-        #LOC_SHIPENGOP_shipSpecs_twr = TWR:\u00A0
-        #LOC_SHIPENGOP_shipSpecs_dv = dv:\u00A0
+        #LOC_SHIPENGOP_shipSpecs_twr = Actual TWR:\u00A0
+        #LOC_SHIPENGOP_shipSpecs_dv = Actual dv:\u00A0
 
         // engine specs
-        #LOC_SHIPENGOP_engSpecs_weight = Weight: 
-        #LOC_SHIPENGOP_engSpecs_thrust = Thrust: 
-        #LOC_SHIPENGOP_engSpecs_isp = ISP: 
-        #LOC_SHIPENGOP_engSpecs_wdr = Mass Ratio (fuel tanks): 
+        #LOC_SHIPENGOP_engSpecs_weight = Effective Mass
+        #LOC_SHIPENGOP_engSpecs_thrust = Thrust
+        #LOC_SHIPENGOP_engSpecs_isp = ISP
+        #LOC_SHIPENGOP_engSpecs_wdr = Mass Ratio
+        #LOC_SHIPENGOP_engSpecs_basicStats = Basic Stats
+        #LOC_SHIPENGOP_engSpecs_optimalOperatingStats = Optimal Operating Stats
+        #LOC_SHIPENGOP_engSpecs_optimalDv = Optimal dv
+        #LOC_SHIPENGOP_engSpecs_optimalTwr = Optimal TWR (surface)
 
+        // units
+        #LOC_SHIPENGOP_units_tons = t
+        #LOC_SHIPENGOP_units_kiloNewton = kN
+        #LOC_SHIPENGOP_units_seconds = s
+        #LOC_SHIPENGOP_units_metersPerSecond = m/s
+        #LOC_SHIPENGOP_units_kilometersPerSecond = km/s
+        #LOC_SHIPENGOP_units_kilometers = km
+
+        //tooltips
+        #LOC_SHIPENGOP_tooltips_toggleTooltips = Toggle tooltips
+
+        #LOC_SHIPENGOP_tooltips_fuelFilter = Choose which types of engines to be included in calculation. Engines are grouped by the propellants they use. If a propellant combination is not shown here, check the propellant setting to make sure it has a proper mass ratio. 
+        #LOC_SHIPENGOP_tooltips_payloadMass = The payload mass must include all the necessities of the vessel. Basically, this is your vessel ripped off any fuel, fuel tank, and engine. 
+        #LOC_SHIPENGOP_tooltips_optimizingStages = Optimize the delta-v distribution of the selected stages to yield the lowest total weight.\nNote 1: This function can only operate in "constrain dv" mode. Clicking this button will also force syncing the desired TWR and atmospheric setting to the lowest numbered stage among the selected stages. If your stages must operate under different TWR or atmospheric environment, you should not use this function to plan your staging.\nNote 2: This function will actively delete stages to yield the best result.
+        #LOC_SHIPENGOP_tooltips_extraMass = Extra mass is the mass of necessities which will not be included in the next stage. The most notable example is the mass of separation rings. 
+        #LOC_SHIPENGOP_tooltips_strictMode = The strict mode decides how the non-locked value will be determined. For example, in ¡°lock dv¡± mode, the actual TWR will always be higher than the input value if strict mode is on, while the closest TWR will be chosen if strict mode is off. 
+        #LOC_SHIPENGOP_tooltips_constrainDv = Because an engine is indivisible, only one of the desired value can be exact. If "lock dv" is chosen, the actual TWR may vary from the desired value. 
+        #LOC_SHIPENGOP_tooltips_constrainTwr = Because an engine is indivisible, only one of the desired value can be exact. If "lock TWR" is chosen, the actual delta-v may vary from the desired value. 
+        #LOC_SHIPENGOP_tooltips_selectPlanet = Select the atmosphere here.\nNote: The gravity for TWR calculation will also change if you change the atmosphere. 
+        #LOC_SHIPENGOP_tooltips_asparagusStaging = Turn this option on if you have asparagus staging. However, do NOT turn this option on for the last stage (central stage) in your asparagus staging.\nThe engine of an asparagus stage is tied to its upper stage. You can NOT automatically split an asparagus stage. 
+        #LOC_SHIPENGOP_tooltips_includeOptimizing = Include this stage in "optimizing stages" function. To include an asparagus stage, click this option for the last stage of asparagus staging.
+        #LOC_SHIPENGOP_tooltips_stageEngineAutoMode = The engine shown here is selected automatically to yield the lowest stage mass, based on the desired delta-v and TWR. Turn on "manually select engine" if you would like to choose an engine manually. To exclude an engine from automatic selection, go to "engine setting" and turn on blacklist.
+        #LOC_SHIPENGOP_tooltips_stageEngineManualMode = Click this button to open the "stage engine selection" window. The selection window has an independent propellant filter, and the engine configuration shown there will change based on the input of this stage. 
+        #LOC_SHIPENGOP_tooltips_automaticSplit = Automatically split this stage with an optimal delta-v distribution. If nothing happens after you click this, it means that a single stage is already the optimal configuration.\nThe automatic split will not consider the weight of separators. To get a more accurate value, enter the mass of separators in the "extra mass", and use the "optimize staging" function to optimize again.\nNote: This function may not find the global minimum if more than 3 stages are generated. 
+        
+        #LOC_SHIPENGOP_tooltips_effecitveWeight = Effective mass of an engine includes the mass of the engine itself AND the mass of all its necessities (for example, eletricity source for ion thrusters). Player may adjust this value in the "Engine Settings" by turning on "Additional Mass" and enter the mass of necessities.
+        #LOC_SHIPENGOP_tooltips_massRatio = This is the mass ratio of the propellant TANKs used by the engine. Tanks for the same propellant may have different mass ratios. Player may change the mass ratio for each propellant in "propellant setting", or change the defualt value at defaultPropMR.cfg file.
+        #LOC_SHIPENGOP_tooltips_optimalDv = Optimal delta-v is the maximum delta-v, for this engine, where spliting a single stage may not result in a lower total mass. It represents the maximum in the TWR-critical delta-v graph.
+        #LOC_SHIPENGOP_tooltips_optimalTwr = Optimal TWR is the most suitable vessel-wise TWR for this engine to operate at. It represents the maximum in the TWR-critical delta-v graph.
+        #LOC_SHIPENGOP_tooltips_twr-dvGraph = Show the critical delta-v or delta-v limit at a given TWR for the selected engines.
+        #LOC_SHIPENGOP_tooltips_engineConfigChart = Show the total weight, TWR, and delta-v for possible engine configurations.
+
+        #LOC_SHIPENGOP_tooltips_dvCritical = Critical delta-v is the minimum delta-v where spliting a single stage will always result in a lower total weight (not considering asparagus staging). 
+        #LOC_SHIPENGOP_tooltips_dvLimit = Delta-v limit is the maximum possible delta-v a single stage can achieve at a given TWR. 
     }
 }
