--- a/ShipEngineOp/Localization/zh-cn.cfg
+++ b/ShipEngineOp/Localization/zh-cn.cfg
@@ -2,29 +2,34 @@ Localization
 {
     zh-cn
     {
-        #LOC_SHIPENGOP_mainWindowTitle = 发动机配置优化
+        #LOC_SHIPENGOP_mainWindowTitle = 分级和发动机构型优化
         #LOC_SHIPENGOP_indiWindowTitle = 精选模式
         #LOC_SHIPENGOP_dvGraphTitle = Delta-v极限曲线
         #LOC_SHIPENGOP_engPerfChartTitle = 发动机配置图表
         #LOC_SHIPENGOP_engSelWindowTitle = 选择发动机
         #LOC_SHIPENGOP_grossCompTitle = 粗选模式
         #LOC_SHIPENGOP_planetTitle = 选择星球
+        #LOC_SHIPENGOP_stageWindowTitle = 分级发动机配置
+        #LOC_SHIPENGOP_stageEngineWindowTitle = 分级发动机选择
 
         #LOC_SHIPENGOP_empty = 无
         #LOC_SHIPENGOP_joint = 、
+        #LOC_SHIPENGOP_infinity = 无穷大
 
         // main window
-        #LOC_SHIPENGOP_mainWindow_grossComp = 同时比较\n所有发动机
-        #LOC_SHIPENGOP_mainWindow_indiComp = 精细比较\n至多3个发动机
+        #LOC_SHIPENGOP_mainWindow_stageConfig = 分级优化\n和发动机构型
+        #LOC_SHIPENGOP_mainWindow_engineSepc = 发动机\n详细参数比较
+        #LOC_SHIPENGOP_mainWindow_engineSetting = 发动机设置
+        #LOC_SHIPENGOP_mainWindow_propellantSetting = 燃料设置
 
         // individual comparison window
         #LOC_SHIPENGOP_indiWindow_engine = 发动机
         #LOC_SHIPENGOP_indiWindow_wdrToggle = 自定义干质比
         #LOC_SHIPENGOP_indiWindow_addiWeightToggle = 额外重量 (t)
         #LOC_SHIPENGOP_indiWindow_applyToFuel = 应用到该燃料类型
-        #LOC_SHIPENGOP_indiWindow_selectWarning = 选择至少一个发动机才能继续
-        #LOC_SHIPENGOP_indiWindow_enginePerfChart = 发动机配置图表
-        #LOC_SHIPENGOP_indiWindow_dvLimitCurce = delta-v 极限曲线
+        #LOC_SHIPENGOP_indiWindow_enginePerfChart = 发动机构型图表
+        #LOC_SHIPENGOP_indiWindow_dvLimitCurce = 推重比-dv曲线
+        #LOC_SHIPENGOP_indiWindow_linkAtm = 同步大气条件
 
         // engine selection list
         #LOC_SHIPENGOP_engList_fuelSelect = 选择燃料类型：
@@ -32,6 +37,9 @@ Localization
 
         // dv limit window
         #LOC_SHIPENGOP_dvLimitWindow_twrLimit = 最大显示推重比
+        #LOC_SHIPENGOP_dvLimitWindow_graphOption = 绘制选项
+        #LOC_SHIPENGOP_dvLimitWindow_dvCritical = 临界 dv
+        #LOC_SHIPENGOP_dvLimitWindow_dvLimit = dv 极限
 
         //
         #LOC_SHIPENGOP_engQtyWindow_qtyMin = 最小数量：
@@ -39,22 +47,36 @@ Localization
         #LOC_SHIPENGOP_engQtyWindow_targetDv = 目标dv：
         #LOC_SHIPENGOP_engQtyWindow_targetTwr = 目标推重比：
 
-        // gross comparison window
-        #LOC_SHIPENGOP_grossWindow_fuelFilter = 选择燃料类型：
-        #LOC_SHIPENGOP_grossWindow_configTitle = 发动机配置（按总重排列）
-        #LOC_SHIPENGOP_grossWindow_desiredDv = 目标dv (m/s)：
-        #LOC_SHIPENGOP_grossWindow_desiredTwr = 目标推重比（表面）：
-        #LOC_SHIPENGOP_grossWindow_minDv = 最小dv (m/s)：
-        #LOC_SHIPENGOP_grossWindow_minTwr = 最小推重比（表面）：
-        #LOC_SHIPENGOP_grossWindow_QtyFilter = 限制发动机数量
-        #LOC_SHIPENGOP_grossWindow_setIndiComparison = 设置到精选模式
-        #LOC_SHIPENGOP_grossWindow_setIndiCancel = 取消
+        //stage window
+        #LOC_SHIPENGOP_stageWindow_desiredDv = 目标dv (m/s)
+        #LOC_SHIPENGOP_stageWindow_desiredTwr = 目标推重比（表面）
+        #LOC_SHIPENGOP_stageWindow_QtyFilter = 限制发动机数量
+        #LOC_SHIPENGOP_stageWindow_strictMode = 严格模式
+        #LOC_SHIPENGOP_stageWindow_propellantFilter = 筛选燃料（全局）
+        #LOC_SHIPENGOP_stageWindow_propellantFilterManualMode = 筛选燃料
+        #LOC_SHIPENGOP_stageWindow_engineConfig = 可用发动机构型（按总质量排列）
+        #LOC_SHIPENGOP_stageWindow_totalDv = 总dv：
+        #LOC_SHIPENGOP_stageWindow_stage = 分级\u00A0
+        #LOC_SHIPENGOP_stageWindow_extraMass = 额外分级质量 (t)
+        #LOC_SHIPENGOP_stageWindow_stageMass = 分级质量：
+        #LOC_SHIPENGOP_stageWindow_manualMode = 手动选择发动机
+        #LOC_SHIPENGOP_stageWindow_keepEngine = 洋葱式分级
+        #LOC_SHIPENGOP_stageWindow_includeInOp = 进入优化计算
+        #LOC_SHIPENGOP_stageWindow_splitStage = 自动拆分
+        #LOC_SHIPENGOP_stageWindow_selectedStages = 已选择分级：
+        #LOC_SHIPENGOP_stageWindow_optimizeStaging = 自动优化分级
+
+        //setting windows
+        #LOC_SHIPENGOP_settingWindow_blacklist = 排除计算
+        #LOC_SHIPENGOP_settingWindow_propellant = 燃料
+        #LOC_SHIPENGOP_settingWindow_massRatio = 干质比
+        #LOC_SHIPENGOP_settingWindow_saveSetting = 保存设定
 
         // common window
         #LOC_SHIPENGOP_common_planetSelect = 选择星球
         #LOC_SHIPENGOP_common_altitude = 海拔高度：
-        #LOC_SHIPENGOP_common_constrainDv = 限制dv
-        #LOC_SHIPENGOP_common_constrainTwr = 限制推重比
+        #LOC_SHIPENGOP_common_constrainDv = 锁定dv
+        #LOC_SHIPENGOP_common_constrainTwr = 锁定推重比
         #LOC_SHIPENGOP_common_careerToggle = 生涯模式
         #LOC_SHIPENGOP_common_payloadMass = 载荷质量（t）：
         #LOC_SHIPENGOP_common_loadMass = 从编辑器加载
@@ -65,14 +87,52 @@ Localization
         #LOC_SHIPENGOP_shipSpecs_totalMass = 总质量：
         #LOC_SHIPENGOP_shipSpecs_fuelMass = 燃料质量：
         #LOC_SHIPENGOP_shipSpecs_engineQty = 发动机数量：
-        #LOC_SHIPENGOP_shipSpecs_twr = 推重比：
-        #LOC_SHIPENGOP_shipSpecs_dv = dv:\u00A0
+        #LOC_SHIPENGOP_shipSpecs_twr = 实际推重比：
+        #LOC_SHIPENGOP_shipSpecs_dv = 实际dv:\u00A0
 
         // engine specs
-        #LOC_SHIPENGOP_engSpecs_weight = 自重：
-        #LOC_SHIPENGOP_engSpecs_thrust = 推力：
-        #LOC_SHIPENGOP_engSpecs_isp = 比冲：
-        #LOC_SHIPENGOP_engSpecs_wdr = 干质比(燃料罐)：
+        #LOC_SHIPENGOP_engSpecs_weight = 有效自重
+        #LOC_SHIPENGOP_engSpecs_thrust = 推力
+        #LOC_SHIPENGOP_engSpecs_isp = 比冲
+        #LOC_SHIPENGOP_engSpecs_wdr = 干质比
+        #LOC_SHIPENGOP_engSpecs_basicStats = 基本参数
+        #LOC_SHIPENGOP_engSpecs_optimalOperatingStats = 最适运行参数
+        #LOC_SHIPENGOP_engSpecs_optimalDv = 最适dv
+        #LOC_SHIPENGOP_engSpecs_optimalTwr = 最适推重比（表面）
 
+        // units
+        #LOC_SHIPENGOP_units_tons = t
+        #LOC_SHIPENGOP_units_kiloNewton = kN
+        #LOC_SHIPENGOP_units_seconds = s
+        #LOC_SHIPENGOP_units_metersPerSecond = m/s
+        #LOC_SHIPENGOP_units_kilometersPerSecond = km/s
+        #LOC_SHIPENGOP_units_kilometers = km
+
+        //tooltips
+        #LOC_SHIPENGOP_tooltips_toggleTooltips = 开关鼠标悬停提示
+
+        #LOC_SHIPENGOP_tooltips_fuelFilter = 选择参与计算的发动机类型，发动机根据其所用的燃料分类。若此处缺少某种燃料组合，请前往“燃料设置”，为其输入一个合理的燃料罐干质比。
+        #LOC_SHIPENGOP_tooltips_payloadMass = 载荷质量包括航天器运行必须的所有组件质量。也就是说，这是航天器扒掉所有燃料罐和发动机之后的质量。
+        #LOC_SHIPENGOP_tooltips_optimizingStages = 自动优化所选择分级的dv分布。该功能只能在“限制dv”模式下进行。\n注1：执行该功能时还会将所选分级的目标推重比和大气条件强制与所选编号最小的分级同步。如果你的分级需要在不同的推重比或大气条件下运行，那你不该使用该功能来规划分级。\n注2：该功能会主动删减分级以获得最优解。
+        #LOC_SHIPENGOP_tooltips_extraMass = 额外质量指的是不会进入下一分级的必需组件质量。最主要的例子就是分离环的质量。
+        #LOC_SHIPENGOP_tooltips_strictMode = 严格模式将决定未锁定的参数如何选择。例如在“锁定dv”模式下，开启严格模式时，分级的实际推重比必定会大于输入值；而关闭严格模式时，实际推重比会取一个最近值。
+        #LOC_SHIPENGOP_tooltips_constrainDv = 由于单个发动机不可拆分，只有一个目标参数能与输入值保持一致。在“锁定dv”模式下，右侧显示的分级配置将恰好拥有输入的目标dv，而实际推重比将略有不同。
+        #LOC_SHIPENGOP_tooltips_constrainTwr = 由于单个发动机不可拆分，只有一个目标参数能与输入值保持一致。在“锁定推重比”模式下，右侧显示的分级配置将恰好拥有输入的目标推重比，而实际dv将略有不同。
+        #LOC_SHIPENGOP_tooltips_selectPlanet = 点击此处选择大气层。\n注意：变更大气层后，计算推重比所用的重力也会相应改变。
+        #LOC_SHIPENGOP_tooltips_includeOptimizing = 将该分级加入到“自动优化分级”计算中。如要计算洋葱分级，请在洋葱分级的最后一级点选此项。
+        #LOC_SHIPENGOP_tooltips_asparagusStaging = 需要设计洋葱分级时打开此选项。但不要在洋葱分级的最后一级（即芯级）打开此选项。洋葱分级的发动机将绑定为上方分级的发动机。洋葱分级无法使用“自动拆分”功能。
+        #LOC_SHIPENGOP_tooltips_stageEngineAutoMode = 此处自动选择的发动机可以在满足目标dv和推重比的情况下拥有最小的分级质量。如果玩家对结果不满意，可以使用上方的“手动选择发动机”，或进入“发动机设置”菜单，将某个发动机排除自动选择。
+        #LOC_SHIPENGOP_tooltips_stageEngineManualMode = 点击该按钮将进入“分级发动机选择”菜单。该菜单拥有独立的燃料筛选，其中列出的发动机将根据此分级的各项输入条件做出变化。
+        #LOC_SHIPENGOP_tooltips_automaticSplit = 自动拆分本级并为其设置最佳dv分布。如果点击后没有任何变化，说明不拆分已是最佳方案。\n注1：自动分级不会考虑分离器的质量。想要得到更准确的dv分布，请于拆分后在“额外质量”中填入分离器的质量，然后使用“自动分级优化”功能再次计算。\n注2：此功能在拆分后分级数大于3时，可能不会找到绝对最佳方案。
+        
+        #LOC_SHIPENGOP_tooltips_effecitveWeight = 有效自重包括发动机自身的质量，以及发动机必需的所有配件质量（例如离子推进器的供电设备）。要调节该数值，玩家可以在“发动机设置”中，激活“额外质量”，然后输入所需配件的质量。
+        #LOC_SHIPENGOP_tooltips_massRatio = 此处的干质比指的是发动机所用燃料罐的干质比。即使是同一种燃料，不同的燃料罐干质比也可能不同。玩家可以在“燃料设置”中调节该数值，也可以修改defaultPropMR.cfg文件。
+        #LOC_SHIPENGOP_tooltips_optimalDv = 最适dv是该发动机对应的重要dv节点。当单个分级的dv大于最适dv时，拆分该分级一定会使总质量降低。该数值对应的是推重比-临界dv曲线上的拐点。
+        #LOC_SHIPENGOP_tooltips_optimalTwr = 最适推重比指的是最适合该发动机工作的整船推重比。该数值对应的是推重比-临界dv曲线上的拐点。
+        #LOC_SHIPENGOP_tooltips_twr-dvGraph = 显示指定推重比下的临界dv或dv极限曲线。
+        #LOC_SHIPENGOP_tooltips_engineConfigChart = 显示各种发动机构型对应的总质量、推重比、dv。
+
+        #LOC_SHIPENGOP_tooltips_dvCritical = 临界dv是一个重要的dv界限。当单个分级的dv不超过临界dv时，拆分该分级一定会使总质量增加（非洋葱分级）。
+        #LOC_SHIPENGOP_tooltips_dvLimit = dv极限指的是在一个指定的推重比之下，单个分级所能获得的最大dv。
     }
 }
