--- a/ShipEngineOp/StagingEngineConfig.csproj
+++ b/ShipEngineOp/StagingEngineConfig.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F97944A1-5895-4A3C-8698-A0ED88BE8BA3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ShipEngineOptimization</RootNamespace>
-    <AssemblyName>ShipEngineOptimization</AssemblyName>
+    <RootNamespace>StagingEngineConfig</RootNamespace>
+    <AssemblyName>StagingEngineConfig</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -73,22 +73,28 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="SEO_CommonFunctions.cs" />
+    <None Include="SEO_GraphWindow_lecacy.cs" />
+    <Compile Include="SEO_EngineStats.cs" />
     <Compile Include="SEO_Main.cs" />
-    <Compile Include="SEO_Functions.cs" />
     <Compile Include="SEO_GraphWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SEO_pso.cs" />
+    <Compile Include="SEO_Stages.cs" />
+    <Compile Include="SEO_StageWindow.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <None Include="Config\defaultPropMR.cfg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Localization\en-us.cfg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="Localization\zh-cn.cfg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Config\defaultMR.cfg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="Config\defaultMR_lecacy.cfg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
